Interim Conclusions & Final Conclusions With Formatting

--- a/EDA_Airbnb_Bookings_Analysis_Capstone_Project.ipynb
+++ b/EDA_Airbnb_Bookings_Analysis_Capstone_Project.ipynb
@@ -1841,6 +1841,17 @@
     {
       "cell_type": "markdown",
       "source": [
+        "## Conclusion 1:\n",
+        "\n",
+        "From the business standpoint, Sonder(NYC), Blueground, Michael, Alex, Kara, Jessica, David, Sally, John and Kevin are our most important customers. Their top 3 most prefered destinations are Manhattan, Brooklyn and Queens. Their prefered choices of accomodations are mostly Entire home/apt and Private room."
+      ],
+      "metadata": {
+        "id": "OrVzioKlIFwe"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## b. Neighbourhood_group"
       ],
       "metadata": {
@@ -2879,6 +2890,21 @@
     {
       "cell_type": "markdown",
       "source": [
+        "## Conclusion 2:\n",
+        "\n",
+        "Manhattan is the urban core of New York city. It is also economic powerhouse of the city. Many globally famous tourist attraction are present like Empire State Building, Statue of Liberty and Central Park. Thus, many people from around the globe flock here to experience the American richness and culture. From our analysis, we can see that many people spend most time in this neighbourhood group for various reasons. They most likely spend most of their money in Manhattan rather than other neighbourhood group. \n",
+        "\n",
+        "Brooklyn is both residential and industrial and also handles a vast amount of oceangoing traffic. It too have few tourist attractions like Brooklyn museum and Coney Island. Many people comes to this neighbourhood group mainly because of industries.\n",
+        "\n",
+        "Queens is less visited neighbourhood group, followed by Bronx and Staten Island respectively."
+      ],
+      "metadata": {
+        "id": "h9LCZA1Cr0eM"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# c. Neighbourhood"
       ],
       "metadata": {
@@ -3385,6 +3411,29 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Conclusion 3:\n",
+        "\n",
+        "From the above analysis we may say the following things:\n",
+        "\n",
+        "1- Maximum Bookings is Done at Williamsburg. It is inside Brooklyn neighbourhood_group.\n",
+        "\n",
+        "2- Harlem is the most visited neighbourhood in Manhattan.\n",
+        "\n",
+        "3- Private rooms and Entire Home/Apartments are almost equally booked in Williamsburg.\n",
+        "\n",
+        "4- Earnings from Entire Home/Apartments is maximum in Williamsburg.\n",
+        "\n",
+        "4- The Average price of rooms in Willsburg is quite similar with the rest of Neighbourhood.\n",
+        "\n",
+        "The Entire Home/Apts is booked by Family Outings and Private Rooms booked by Couples. So, we may say that Willsburg is one of the most desired tourist area out of all Neighbourhoods because it has beaches, mueseums etc and rooms are available at national average. Hence, people booked Willsberg the most.\n"
+      ],
+      "metadata": {
+        "id": "kWMpjsvKnv-4"
+      }
     },
     {
       "cell_type": "markdown",
@@ -3959,6 +4008,38 @@
       ],
       "metadata": {
         "id": "9weVhgm8xT50"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Conclusion 4:\n",
+        "\n",
+        "There are various conclusion we can draw from this feature:\n",
+        "\n",
+        "1- Almost 80% people likely to stay at rooms with price below 200.\n",
+        "\n",
+        "2- Duration of stay in less expensive rooms are more compared to more expensive rooms.\n",
+        "\n",
+        "3- There is more likely of people choosing less expensive neighbourhood for their accomodation even in expensive neighbourhood_groups like Manhattan and Brooklyn."
+      ],
+      "metadata": {
+        "id": "Kmkn0o9YxzE0"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Final Conclusion:\n",
+        "\n",
+        "Manhttan being the urban core of New York city, many people across US come to live a descent lifestyle. It has many globally recognised tourist attractions, thus people from around the globe flock into this city. It is also the most expensive places among other neighbourhoods. \n",
+        "\n",
+        "Brooklyn is both residential and industrial hotspot. Many people around the country and globe comes here in search of employment. It is the second most expensive neighbourhood.\n",
+        "\n",
+        "Sonder(NYC), Blueground, Michael and David are top 4 most spending customers. Their popular destinations is mainly Manhattan, Brooklyn and Queens. "
+      ],
+      "metadata": {
+        "id": "RGV3j9uQSeUC"
       }
     }
   ]
